Added social media

--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <html>
     <head>
         <title>Michelle Mello - DoWhile 2021</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
+    <main>
+      <div class="content">
+
+        <div class="avatar">
+          <img src="images/selo.svg" alt="selo rocketseat">
+          <img src="images/foto.jfif" alt="foto pessoal">
+        </div>
+
+        <h1>Michelle Mello</h1>
+        <a href="">
+          <img src="images/github 2.svg" alt="Github"> _michellemello</a>  
+          <p>An instructor focused on helping pople start programming for web</p>
+
+      </div>
+
+      <ul>
+        <li><a href="youtube.com.br/_michellemello"><img src="images/youtube.svg" alt="Youtube"></a></li>
+        <li><a href="instagram.com/mi.demello"><img src="images/instagram.svg" alt="Instagram"></a></li>
+        <li><a href="facebook.com.br"><img src="images/facebook.svg" alt="Facebook"></a></li>
+        <li><a href="twitter.com/_michellemello"><img src="images/twitter.svg" alt="Twitter"></a></li>
+      </ul>
+
+    </main>
+
     <body>
-      <h1>Michelle Mello</h1>
-      <a href="">@_michellemello</a>  
     </body>
 </html>
